tests/negative/import_nested_scope.far
fun main() -> i64 {
  import math
  return math.imin(1, 2)
}
